# ProcessingListOfObjects

./: README.md
ProcessingListOfObjects/: CMakeLists.txt  comparator.cpp  comparator.h  geo.cpp  geo.h  group.cpp  group.h  input.txt  input_output.cpp  input_output.h  input_reader.cpp  input_reader.h  main.cpp  object.cpp  object.h  processingobjects.cpp  processingobjects.h  processingobjects.ui
